examples/06-policy-engines/02-Kyverno/test-kyverno-pod-with-resources.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-resources
  labels:
    team: "conclusion-xforce"
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      requests:
        memory: "128Mi"
        cpu: "100m"
