examples/06-policy-engines/02-Kyverno/test-kyverno-pod-without-resources.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-no-resources
  labels:
    team: "conclusion-xforce"
spec:
  containers:
  - name: nginx
    image: nginx:latest
