examples/06-policy-engines/02-Kyverno/test-kyverno-pod-without-team.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-team-kyverno
spec:
  containers:
  - name: nginx
    image: nginx:latest
