examples/06-policy-engines/02-Kyverno/mutate-default-resources.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-default-resources
spec:
  rules:
  - name: add-default-requests
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - 06-policy-engines-kyverno
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            resources:
              requests:
                +(cpu): "50m"
                +(memory): "64Mi"
